# fastapi-react-template

./: .dockerignore  .env  .gitignore  README.md  compose.dev.yml  compose.yml  skills-lock.json
.agents/skills/backend-architecture/: SKILL.md
.agents/skills/frontend-architecture/: SKILL.md
.agents/skills/tanstack-frontend/: SKILL.md
.agents/skills/translations/: SKILL.md
.agents/skills/zustand/: SKILL.md
backend/: .dockerignore  Dockerfile  Dockerfile.build  README.md  pyproject.toml  uv.toml
backend/app/: models.py  utils.py
backend/app/alembic/: env.py
backend/app/api/: deps.py
backend/app/api/routes/: items.py  login.py  users.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  entities.py
backend/app/models/dto/: __init__.py  item.py  token.py  user.py
backend/app/repositories/: base_repository.py  item_repository.py  user_repository.py
backend/app/services/: item_service.py  user_service.py
backend/scripts/: prestart.sh
backend/tests/: conftest.py
backend/tests/api/routes/: test_login.py  test_users.py
backend/tests/crud/: test_user.py
backend/tests/utils/: item.py  user.py
frontend/: .npmrc  Dockerfile  Dockerfile.build  README.md  biome.json  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: i18next.d.ts  index.css  main.tsx  routeTree.gen.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/Admin/: AddUser.tsx  DeleteUser.tsx  EditUser.tsx  columns.tsx
frontend/src/components/Map/: LeafletMap.tsx
frontend/src/components/Sidebar/: AdminSidebar.tsx  AppSidebar.tsx  User.tsx
frontend/src/components/UserSettings/: ChangePassword.tsx  DeleteAccount.tsx  DeleteConfirmation.tsx  UserInformation.tsx
frontend/src/components/ui/: message-scroller.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/layouts/AdminLayout/: AdminLayout.tsx
frontend/src/routes/: _admin.tsx  _layout.tsx  login.tsx  signup.tsx
frontend/src/store/: useAuthStore.ts
scripts/: archive_project.py  dev-local.sh  dev.sh  generate-client.sh  load-images.sh  save-images.sh  test.sh
(+38 files in other folders)
