[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.13.12,<4.0"
dependencies = [
  "alembic<2.0.0,>=1.12.1",
  "charset-normalizer>=3.4.7",
  "email-validator<3.0.0.0,>=2.1.0.post1",
  "fastapi[standard]>=0.138.1,<1.0.0",
  "filetype>=1.2.0",
  "httpx<1.0.0,>=0.25.1",
  "jinja2<4.0.0,>=3.1.4",
  "openai>=2.44.0",
  "psycopg[binary]<4.0.0,>=3.1.13",
  "pwdlib[argon2,bcrypt]>=0.3.0",
  "pydantic>2.0",
  "pydantic-settings<3.0.0,>=2.2.1",
  "pyjwt<3.0.0,>=2.13.0",
  "pypdf>=6.14.2",
  "python-docx>=1.2.0",
  "python-multipart<1.0.0,>=0.0.27",
  "python-pptx>=1.0.2",
  "sqlmodel>=0.0.39,<1.0.0",
  "tenacity<10.0.0,>=8.2.3",
]

[dependency-groups]
dev = [
  "coverage<8.0.0,>=7.4.3",
  "mypy<3.0.0,>=1.8.0",
  "pytest<10.0.0,>=7.4.3",
  "ruff<1.0.0,>=0.2.2",
  "ty>=0.0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.fastapi]
entrypoint = "app.main:app"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.pyright]
extraPaths = [".venv/lib/python3.13/site-packages"]

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG001",  # unused arguments in functions
  "T201",  # print statements are not allowed
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "W191",  # indentation contains tabs
  "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ty.terminal]
error-on-warning = true
